Force Docker cache rebuild for Redis extension fix
Add cache-busting comment to ensure DigitalOcean uses the updated
Dockerfile.digitalocean with pre-built Redis package instead of
the cached layer that was trying to compile Redis via pecl.

This should force a complete rebuild from the Redis installation
layer onwards, bypassing any cached layers with pecl install redis.

--- a/Dockerfile.digitalocean
+++ b/Dockerfile.digitalocean
@@ -51,6 +51,7 @@ RUN apk add --no-cache --virtual .build-deps \
     apk del .build-deps
 
 # Install Redis extension via Alpine package (avoid compilation issues)
+# Cache bust: 2025-06-17-06:50 - Force rebuild from this point
 RUN apk add --no-cache php82-pecl-redis && \
     echo "extension=redis.so" > /usr/local/etc/php/conf.d/redis.ini
 
